--- a/rick/final/3_fit_model.Rmd
+++ b/rick/final/3_fit_model.Rmd
@@ -19,6 +19,18 @@ output:
   # Preparations
   
 ```{r setup}
+args <- commandArgs(trailingOnly=T)
+
+path <- args[1]
+#path <- '/Users/luke/Documents/QualityPaper/rick/final/'
+setwd(path)
+
+plinkPath <- args[2] 
+#plinkPath <- '/Users/luke/genomes/genomes/hg19/plink/'
+
+chr <- args[3]
+#chr <- '22_10000'
+
 knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file(), fig.width=16)
 options(scipen=999)
 ```
@@ -32,51 +44,41 @@ library(tictoc)
 library(data.table)
 options(future.globals.maxSize= 1000000000000)
 plan(multicore)
-
-path='/Users/luke/Documents/QualityPaper/rick/final/'
-setwd(path)
-
-plinkPath='/Users/luke/genomes/genomes/hg19/plink/'
-chr='22_10000'
 ```
-
+load plink format genotype data
 ```{r}
 data_genotype <- read.bed(paste0(plinkPath,'chr',chr))
-#data_genotype <- read.bed("./data/plink/ALL_Pops")
 
 message("plink data loaded")
 ```
-
+get rsIDs and add them as rownames for genotype data
 ```{r}
 data_bim <- fread(paste0(plinkPath,'chr',chr,'.bim'), 
                   col.names = c('Chr','rsID','X',
                                 'Pos','Ref','Alt'))
 
-
 rownames(data_genotype) <- data_bim$rsID
-#loci <- data_bim$rsID
-#loci <- c(1:dim(data_genotype)[1])
 ```
-
-
+run lfa if needed
 ```{r lfa}
 tic()
 #LF <- lfa(data_genotype, 5)
 toc()
 message("lfa run complete")
 ```
-
+save lfa if needed
 ```{r save}
 tic()
 #saveRDS(LF, "./data/preprocessed/lf5.rds")
 toc()
 ```
-
+load logistic factor analysis results
 ```{r read lf}
 LF <- readRDS( "./data/preprocessed/lf5.rds")
 ```
-
+define functions
 ```{r}
+#this runs the logistic regression
 lreg <- function(y, X){
   X <- rbind(X, X)
   y1 <- as.numeric((y==1) | (y==2))
@@ -87,10 +89,9 @@ lreg <- function(y, X){
   return(b)
   
 }
-
+#modified from gcat
 fit_glm <- function(..., LF, trait){
   snp <- c(...)
-  snp <- as.numeric(snp[-1]) #drop rsID from GT
   ind <- !is.na(snp) #logical index vector
   snp_no_na <- snp[ind]
   LF_no_na <- LF[ind,]
@@ -154,14 +155,15 @@ head(avg_qual_mean)
 
 ```{r}
 tic("fitting model")
+labels <- rownames(data_genotype)
 data_fit <- 
 	data_genotype %>%
-	as_tibble(rownames="rsID") %>%
+	as_tibble() %>%
 	transmute(
-	rsID=rsID,
 	fit = future_pmap(., fit_glm,
-		LF=LF, 
-		trait=avg_qual_mean))  %>%
+	LF=LF, 
+	trait=avg_qual_mean),
+		rsID=labels)  %>%
 	unnest(fit) %>%
 	mutate(l= rep(c("data","stat"), n()/2))%>%
 	spread(l, fit)%>%
